--- a/spring-petclinic-server/src/main/resources/templates/fragments/layout.html
+++ b/spring-petclinic-server/src/main/resources/templates/fragments/layout.html
@@ -49,6 +49,10 @@
             <span class="fa fa-home" aria-hidden="true"></span>
             <span>Home</span>
           </li>
+          <li th:replace="::menuItem ('/owners','owners','owners list','owners','Owners')">
+            <span class="fa fa-search" aria-hidden="true"></span>
+            <span>Find owners</span>
+          </li>
 
           <li th:replace="::menuItem ('/owners/find','owners','find owners','search','Find owners')">
             <span class="fa fa-search" aria-hidden="true"></span>
