[SERVER] Added helper attributes to html elements required by tests

--- a/spring-petclinic-server/src/main/resources/templates/owners/findOwners.html
+++ b/spring-petclinic-server/src/main/resources/templates/owners/findOwners.html
@@ -21,12 +21,13 @@
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-primary">Find
-          Owner</button>
+        <button data-id="find-owner-btn" type="submit" class="btn btn-primary">Find
+          Owner
+        </button>
       </div>
     </div>
 
-    <a class="btn btn-primary" th:href="@{/owners/new}">Add Owner</a>
+    <a data-id="add-owner-btn" class="btn btn-primary" th:href="@{/owners/new}">Add Owner</a>
 
   </form>
 
